# mcp-hello

./: .cursorrules  .gitignore  0_0_0_Generic-3-Server-MPC.md  GPT-4o.md  README.md  Roadmap-Gemini.md  mcp-hello.code-workspace  pyproject.toml
hack-sesh-files/: combined_file.md  dazzaji_mcp-hello.md  hack-sesh.md
module1/: server.py
module1/src/create_markdown_server/: __init__.py
module1/src/create_markdown_server/create-mcp-server/: pyproject.toml
module1/src/create_markdown_server/create-mcp-server/src/create_mcp_server/: __init__.py
module1/src/create_markdown_server/markdown-creator/: README.md  pyproject.toml  server.py
