[project]
name = "markdown-creator"
version = "0.1.0"
description = "Creates a markdown file from user input and a template"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "mcp>=1.1.2",]
[[project.authors]]
name = "dazzaji"
email = "dazza@civics.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
markdown-creator = "markdown_creator:main"
